--- a/angular.json
+++ b/angular.json
@@ -55,13 +55,13 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                  "maximumWarning": "10000gb",
+                  "maximumError": "10000gb"
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "2kb",
-                  "maximumError": "4kb"
+                  "maximumWarning": "10000gb",
+                  "maximumError": "10000gb"
                 }
               ],
               "serviceWorker": true,
